<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreen"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton28"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:background="@drawable/buttons_chat"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="Нет аккаунта? Не беда!"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton13"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText8"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton13"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toTopOf="@+id/editText9"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText9"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints="Write your login"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText8"
        app:layout_constraintTop_toBottomOf="@+id/editText9"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="Write your password"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText9"
        app:layout_constraintTop_toBottomOf="@+id/editText9"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton13"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/signIn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText8"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editText8"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        app:layout_constraintVertical_bias="0.045" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButtonRegist"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/buttons_chat_three"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="Зарегистрируйся сейчас!"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>