<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondScreen"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="Имя"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toTopOf="@+id/editText11"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText11"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.322" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="Write your login"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:hint="Имя"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toTopOf="@+id/editText12"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText12"
        app:layout_constraintTop_toBottomOf="@+id/editText11"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="Write your email"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText11"
        app:layout_constraintTop_toBottomOf="@+id/editText11"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="Доход"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toTopOf="@+id/editText13"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="@+id/editText13"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="Write your password"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:hint="Доход"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText12"
        app:layout_constraintTop_toBottomOf="@+id/editText12"
        app:layout_constraintVertical_bias="0.052"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="Процент"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_dynamic"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />

    <Spinner
        android:id="@+id/_dynamic"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:inputType="number"
        android:spinnerMode="dropdown"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText13"
        app:layout_constraintTop_toBottomOf="@+id/editText13"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="Пароль"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/_dynamic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/_dynamic"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="Repeat your password"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:hint="Пароль"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/_dynamic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="Фигура"
        android:textColor="@color/white"
        android:textSize="12.9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText14"
        app:layout_constraintTop_toBottomOf="@+id/editText14"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextFigure"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="Повтори свою вигуру"
        android:background="@drawable/edittexts"
        android:fontFamily="@font/hachi_maru_pop"
        android:hint="Фигура"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton12"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttons"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFigure"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButtonToLogin"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:fontFamily="@font/hachi_maru_pop"
        android:text="@string/ToLogin"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton12"
        app:layout_constraintVertical_bias="0.583" />

</androidx.constraintlayout.widget.ConstraintLayout>